--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,35 @@ a {
   display: block;
 }
 
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon.eot?rjyoq0');
+	src:url('../fonts/icomoon.eot?#iefixrjyoq0') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?rjyoq0') format('truetype'),
+		url('../fonts/icomoon.woff?rjyoq0') format('woff'),
+		url('../fonts/icomoon.svg?rjyoq0#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+.contact-icon {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.contact-text {
+  display: none;
+}
+
 .welcome-message {
   font-style: italic;
   font-size: 18px;
@@ -126,6 +155,10 @@ a {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 10px;
+}
+
+.flex-box#skills {
+  flex-direction: column;
 }
 
 .center-content {
@@ -212,5 +245,12 @@ span {
   #skillsH3,
   .biopic {
     display: block;
+  }
+  .contact-icon {
+    display: none;
+  }
+  
+  .contact-text {
+    display: inline;
   }
 }
