--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,27 @@
 * {
-  padding:0;
-  margin:0;
-  font-family: 'Roboto', sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-.clearfix {
-  overflow: auto;
-}
-
-.education-entry, .work-entry, .project-entry {
-  padding-left: 5%;
-  padding-right: 5%;
+a {
+  color: #34a49d;
+  text-decoration: none;
+  margin-top: 10px;
+  display: block;
 }
 
 h1 {
   font-size: 40px;
-  color: #F5A623;
+  color: #f97a7a;
   line-height: 48px;
   display: inline;
 }
 
 h2 {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 24px;
-  color: #999999;
+  color: #999;
   line-height: 29px;
   padding: 10px;
 }
@@ -31,125 +29,124 @@ h2 {
 h3 {
   font-style: italic;
   font-size: 20px;
-  color: #000000;
+  color: #000;
   line-height: 22px;
 }
 
 h4 {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
-  color: #4A4A4A;
+  color: #4a4a4a;
   line-height: 17px;
 }
 
-h2, h3, h4, h5 {
-  padding:10px;
+h2,
+h3,
+h4,
+h5 {
+  padding: 10px;
   padding-left: 5%;
   padding-right: 5%;
 }
 
-
-.date-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999999;
-  line-height: 16px;
-  float: left;
-}
-
-.location-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999999;
-  line-height: 16px;
-  float: right;
-
+img {
+  max-width: 100%;
+  padding: 10px;
 }
 
 p {
   font-size: 14px;
-  color: #333333;
+  color: #333;
   line-height: 21px;
 }
 
-a {
-  color: #1199C3;
-  text-decoration: none;
-  margin-top: 10px;
-  display: block;
+span {
+  padding: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/*
+  ========================= Background =========================
+*/
+
+.light-background {
+  background-color: #f3f3f3;
+  padding-bottom: 10px;
+  clear: both;
+}
+
+.dark-background {
+  background-color: #4a4a4a;
+}
+
+/*
+  ========================= Header =========================
+*/
+
+.header {
+  background-color: #484848;
+}
+
+.center-content {
+  padding-top: 2.5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 2.5%
+}
+
+.clearfix {
+  overflow: auto;
 }
 
 @font-face {
-	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?rjyoq0');
-	src:url('../fonts/icomoon.eot?#iefixrjyoq0') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?rjyoq0') format('truetype'),
-		url('../fonts/icomoon.woff?rjyoq0') format('woff'),
-		url('../fonts/icomoon.svg?rjyoq0#icomoon') format('svg');
-	font-weight: normal;
+	font-family: "icomoon";
+	src:url(../fonts/icomoon.eot?rjyoq0);
+	src:url(../fonts/icomoon.eot?#iefixrjyoq0) format("embedded-opentype"),
+		url(../fonts/icomoon.ttf?rjyoq0) format("truetype"),
+		url(../fonts/icomoon.woff?rjyoq0) format("woff"),
+		url(../fonts/icomoon.svg?rjyoq0#icomoon) format("svg");
+	font-weight: 400;
 	font-style: normal;
 }
 
 .contact-icon {
-	font-family: 'icomoon';
+	font-family: "icomoon";
 	speak: none;
 	font-style: normal;
-	font-weight: normal;
+	font-weight: 400;
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  color: #f97a7a;
 }
 
 .contact-text {
+  color: #f97a7a;
   display: none;
+}
+
+.contact-data,
+.skill-data {
+  font-weight: 700;
+  color: #fff;
 }
 
 .welcome-message {
   font-style: italic;
   font-size: 18px;
-  color: #F3F3F3;
+  color: #f3f3f3;
   line-height: 28px;
 }
 
-#skillsH3 {
-  color: #F5AE23;
+.skillsH3 {
+  color: #f97a7a;
   display: none;
 }
 
-.orange {
-  background-color: #F5AE23;
-}
-
-.orange-text {
-  color: #F5AE23;
-}
-
-.white-text {
-  font-weight: bold;
-  color: #FFFFFF;
-}
-
-.gray {
-  background-color: #F3F3F3;
-  padding-bottom: 10px;
-  clear:both;
-}
-
-.dark-gray {
-  background-color: #4A4A4A;
-}
-
-/* TODO: Replace with image later */
-#header {
-  background-color: #484848;
-}
-
 .flex-box {
-  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -161,17 +158,6 @@ a {
   flex-direction: column;
 }
 
-.center-content {
-  padding-top: 2.5%;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 2.5%
-}
-
-ul {
-  list-style-type: none;
-}
-
 .biopic {
   float: left;
   padding: 10px;
@@ -179,33 +165,81 @@ ul {
   display: none;
 }
 
-img {
-  max-width: 100%;
-  padding: 10px;
+/*
+  ========================= Work Experience, Projects and Education =========================
+*/
+
+.education-entry,
+.work-entry,
+.project-entry {
+  padding-left: 5%;
+  padding-right: 5%;
 }
+
+.date-text {
+  font-style: italic;
+  font-size: 14px;
+  color: #999;
+  line-height: 16px;
+  float: left;
+}
+
+.location-text {
+  font-style: italic;
+  font-size: 14px;
+  color: #999;
+  line-height: 16px;
+  float: right;
+}
+
+/*
+  ========================= Mystery =========================
+*/
 
 /* Bar chart stuff */
 .chart div {
   font: 10px sans-serif;
-  background-color: #4A4A4A;
+  background-color: #4a4a4a;
   text-align: right;
   padding: 3px;
   margin: 1px;
   height: 12px;
-  color: white;
+  color: #fff;
   display: inline-block;
 }
 
-span {
-  padding: 5px;
+/*
+  ========================= Map =========================
+*/
+
+.mapDiv {
+  height: 400px;
+  width: 100%;
+  padding-bottom: 5%;
 }
 
-#letsConnect {
-  text-align: center;
+.googleMap {
+  display: block;
+  height: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
+
+/*
+  ========================= Footer =========================
+*/
+
+.footerh2 {
+  text-align: center;
+  background-color: #f97a7a;
+}
+
+/*
+  ========================= Breakpoints =========================
+*/
 
 @media only screen and (max-width: 1024px) {
-  #letsConnect {
+  .footer {
     margin-top: 5%;
   }
 }
@@ -217,7 +251,7 @@ span {
 }
 
 @media only screen and (max-width: 750px) {
-  #letsConnect {
+  .footer {
     margin-top: 10%;
   }
   .biopic {
@@ -228,27 +262,14 @@ span {
   }
 }
 
-#map {
-  display: block;
-  height: 100%;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
-#mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%;
-}
-
 @media only screen and (min-width: 750px) {
-  #skillsH3,
+  .skillsH3,
   .biopic {
     display: block;
   }
   .contact-icon {
     display: none;
-  }  
+  }
   .contact-text {
     display: inline;
   }
