--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ ul {
 }
 
 /*
-  ========================= Background =========================
+  ========================= Used in multiple divisions =========================
 */
 
 .light-background {
@@ -80,6 +80,14 @@ ul {
 
 .dark-background {
   background-color: #4a4a4a;
+}
+
+.flex-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 10px;
 }
 
 /*
@@ -146,15 +154,7 @@ ul {
   display: none;
 }
 
-.flex-box {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
-}
-
-.flex-box#skills {
+ul.skills.flex-box {
   flex-direction: column;
 }
 
